removed theme switch and overflow mobile fix

--- a/app/global.css
+++ b/app/global.css
@@ -51,7 +51,6 @@ body {
     Helvetica,
     sans-serif "ibm";
   position: relative;
-  overflow: hidden;
 }
 
 /* Light theme (default) */
